<resources>
    <string name="TODO">TODO</string>
    <string name="app_name">HealthCare_App</string>
    <string name="Health24X7">24X7 HealthCare</string>
    <string name="Login">Login</string>
    <string name="Login_page">Login Page</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Register">Register for New User ?</string>
    <string name="Registration">Registration</string>
    <string name="Email">Email</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="Register_newUser">Register</string>
    <string name="already_account">Already have an Account !</string>
    <string name="lab_test">Lab Test</string>
    <string name="buy_med"> Medicine</string>
    <string name="doctor">Find Doctor</string>
    <string name="health_doc">Health Article</string>
    <string name="order_det">Order Details</string>
    <string name="logout">Logout</string>
    <string name="doc">doctor</string>
    <string name="top_doc">Top Doctors</string>
    <string name="family_phy">FAMILY DOCTOR</string>
    <string name="dietian">DIETICIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardio">CARDIOLOGIST</string>
    <string name="back">BACK</string>
    <string name="default_text">Default Text</string>
    <string name="textView">TextView</string>
    <string name="book_appoint">BOOK APPOINTMENT</string>
    <string name="fullName">Doctor Name</string>
    <string name="fullAddress">Doctor Address</string>
    <string name="contactNo">Doctor Contact Number</string>
    <string name="app_fees">Appointment Fees</string>
    <string name="book">Book</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="default_date">24/10/2000</string>
    <string name="default_time">10:00</string>
    <string name="deliver">Deliver Location : Pune</string>
    <string name="lab_packages">Lab Test and Packages</string>
    <string name="goto_cart">GoTo Cart</string>
    <string name="Add_cart">Add To Cart</string>
    <string name="Hi_hello">Hi \nHello</string>
    <string name="total_cost">Total Cost</string>
    <string name="checkout">CheckOut</string>
    <string name="labTest_cartItem">Lab Tests in Cart</string>
    <string name="total_cost2">Total Cost : Yet To Set/-</string>
    <string name="labTestBook">Please Fill All Details for Booking</string>
    <string name="FullNameLabTestBook">Full Name</string>
    <string name="Address">Address</string>
    <string name="Pincode">PinCode</string>
    <string name="contact">Contact Number</string>
    <string name="BookPackages">Book Package</string>
    <string name="orderDetails">Order Details</string>
    <string name="package_fees">Packages Fees</string>
    <string name="buy_med2">Buy Medicine</string>
    <string name="med_INcart">Medicines in Cart</string>
    <string name="sel_delDate">Select Delivery Date</string>
    <string name="med_book">Please Fill All Details for Medicine</string>
    <string name="med_price">Medicine Price</string>
    <string name="book_med">Order Medicines</string>
    <string name="health_art">Health Articles</string>

</resources>