<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CartAndOrderCard.CartLabActivity">

    <TextView
        android:id="@+id/textViewLD_logo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Health24X7"
        android:textColor="@color/mediumPurple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLD_logo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLD_logo4"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textViewCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/labTest_cartItem"
        android:textColor="@color/yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLD_logo6"
        app:layout_constraintVertical_bias="0.021" />

    <ListView
        android:id="@+id/listViewCart"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_margin="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTitle" />

    <TextView
        android:id="@+id/textViewCartTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:text="@string/total_cost2"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTitle"
        app:layout_constraintVertical_bias="0.992" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/select_date"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCartDate"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="6dp"
        android:text="@string/default_date"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/select_time"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCartTime"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="6dp"
        android:text="@string/default_time"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCartBack"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_bt_bg"
        android:backgroundTint="@color/dodger_blue"
        android:drawableStart="@drawable/back_arrow"
        android:drawablePadding="-10dp"
        android:elevation="6dp"
        android:paddingStart="4dp"
        android:paddingEnd="-5dp"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCartCheckout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_bt_bg"
        android:backgroundTint="@color/dodger_blue"
        android:drawableStart="@drawable/baseline_add_chart_24"
        android:drawablePadding="2dp"
        android:elevation="6dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/checkout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>