<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".LabTestCard.LabTestDetailsActivity">

    <TextView
        android:id="@+id/textViewLD_logo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Health24X7"
        android:textColor="@color/mediumPurple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLD_logo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLD_logo4"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textViewLDPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lab_packages"
        android:textColor="@color/yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLD_logo6"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/editTextLDMultiLine"
        android:layout_width="290dp"
        android:layout_height="380dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:editable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:text="@string/Hi_hello"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLDPackageName" />

    <TextView
        android:id="@+id/textViewLDTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="135dp"
        android:text="@string/total_cost"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLDMultiLine"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLDAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/back_bt_bg"
        android:backgroundTint="@color/dodger_blue"
        android:drawableStart="@drawable/baseline_add_chart_24"
        android:drawablePadding="2dp"
        android:elevation="6dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/Add_cart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLDBack"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/back_bt_bg"
        android:backgroundTint="@color/dodger_blue"
        android:drawableStart="@drawable/back_arrow"
        android:drawablePadding="-10dp"
        android:elevation="6dp"
        android:paddingStart="4dp"
        android:paddingEnd="-5dp"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>