<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".DoctorsCard.BookAppointmentActivity">

    <TextView
        android:id="@+id/textView24X7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Health24X7"
        android:textColor="@color/mediumPurple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_appoint"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24X7"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/editTextAppFullName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:alpha="0.7"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppTitle"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/editTextAppAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:alpha="0.7"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_add_location_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/fullAddress"
        android:inputType="text|textPostalAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppFullName"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/editTextAppContactNo"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:alpha="0.7"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_add_ic_call_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contactNo"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppAddress"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/editTextAppFees"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:alpha="0.7"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/app_fees"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppContactNo"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/select_date"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppFees"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAppDate"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="6dp"
        android:text="@string/default_date"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/select_time"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppFees" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAppTime"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="6dp"
        android:text="@string/default_time"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBookApp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:elevation="6dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/mediumPurple"
        android:drawableStart="@drawable/baseline_book_24"
        android:drawablePadding="-20dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/book_appoint"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppFees"
        app:layout_constraintVertical_bias="0.595" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAppBack"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:elevation="6dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/dodger_blue"
        android:drawableStart="@drawable/back_arrow"
        android:drawablePadding="-110dp"
        android:paddingStart="100dp"
        android:paddingEnd="0dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBookApp"
        app:layout_constraintVertical_bias="0.627" />


</androidx.constraintlayout.widget.ConstraintLayout>