<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".LabTestCard.LabTestActivity">


    <TextView
        android:id="@+id/textViewDocDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Health24X7"
        android:textColor="@color/mediumPurple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLTLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDocDetails"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textViewLTPackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_packages"
        android:textColor="@color/yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLTLocation"
        app:layout_constraintVertical_bias="0.021" />

    <ListView
        android:id="@+id/listViewLT"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_margin="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLTPackage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLTGoToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_bt_bg"
        android:drawableStart="@drawable/baseline_add_chart_24"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:drawablePadding="2dp"
        android:backgroundTint="@color/yellow_green"
        android:text="@string/goto_cart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLTBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_bt_bg"
        android:backgroundTint="@color/yellow_green"
        android:drawableStart="@drawable/back_arrow"
        android:drawablePadding="-10dp"
        android:elevation="6dp"
        android:paddingStart="4dp"
        android:paddingEnd="-5dp"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>